--- a/templates/user/users.html.twig
+++ b/templates/user/users.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
     <div>
         <h1>Hola a todos</h1>
-        <button class="btn btn-primary">Hola</button>
+        <a href="{{ path('createUser') }}" class="btn btn-primary">Registrar usuario</a>
 
         <table>
             <thead>
@@ -33,8 +33,9 @@
                         <td>{{ user.lastname }}</td>
                         <td>{{ user.email }}</td>
                         <td>
-                            <a href="{{ path('updateUser', {'id': user.idUser}) }}" class="btn btn-primary">Modificar</a>
-                            <a href="{{ path('deleteUser', {'id': user.idUser}) }}" class="btn btn-delete">Eliminar</a>
+                            <a href="javascript:void(0);" class="btn btn-primary">Modificar</a>
+                            {# <a href="{{ path('updateUser', {'id': user.idUser}) }}" class="btn btn-primary">Modificar</a>
+                            <a href="{{ path('deleteUser', {'id': user.idUser}) }}" class="btn btn-delete">Eliminar</a> #}
                         </td>
                     </tr>
                 {% endfor %}
