--- a/templates/user/users.html.twig
+++ b/templates/user/users.html.twig
@@ -33,9 +33,8 @@
                         <td>{{ user.lastname }}</td>
                         <td>{{ user.email }}</td>
                         <td>
-                            <a href="javascript:void(0);" class="btn btn-primary">Modificar</a>
-                            {# <a href="{{ path('updateUser', {'id': user.idUser}) }}" class="btn btn-primary">Modificar</a>
-                            <a href="{{ path('deleteUser', {'id': user.idUser}) }}" class="btn btn-delete">Eliminar</a> #}
+                            <a href="{{ path('updateUser', {'id': user.idUser}) }}" class="btn btn-primary">Modificar</a>
+                            <a href="{{ path('deleteUser', {'id': user.idUser}) }}" class="btn btn-delete">Eliminar</a>
                         </td>
                     </tr>
                 {% endfor %}
