--- a/templates/user/users.html.twig
+++ b/templates/user/users.html.twig
@@ -22,6 +22,7 @@
                     <th>Nombre</th>
                     <th>Apellido</th>
                     <th>Correo</th>
+                    <th>Estado</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -32,9 +33,10 @@
                         <td>{{ user.name }}</td>
                         <td>{{ user.lastname }}</td>
                         <td>{{ user.email }}</td>
+                        <td>{{ user.status }}</td>
                         <td>
                             <a href="{{ path('updateUser', {'id': user.idUser}) }}" class="btn btn-primary">Modificar</a>
-                            <a href="{{ path('deleteUser', {'id': user.idUser}) }}" class="btn btn-delete">Eliminar</a>
+                            <a href="{{ path('deleteUser', {'id': user.idUser}) }}" class="btn btn-danger">Eliminar</a>
                         </td>
                     </tr>
                 {% endfor %}
