--- a/templates/user/users.html.twig
+++ b/templates/user/users.html.twig
@@ -14,7 +14,7 @@
     <div>
         <h1>Hola a todos</h1>
         <a href="{{ path('createUser') }}" class="btn btn-primary">Registrar usuario</a>
-
+        <a href="{{ path('report_pdf_user') }}" class="btn btn-danger">Generar PDF</a>
         <table>
             <thead>
                 <tr>
