--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,8 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+
+        <script src="{{ asset('../vendor/components/angular.js/angular.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
