--- a/templates/user/users.html.twig
+++ b/templates/user/users.html.twig
@@ -15,6 +15,8 @@
         <h1>Hola a todos</h1>
         <a href="{{ path('createUser') }}" class="btn btn-primary">Registrar usuario</a>
         <a href="{{ path('report_pdf_user') }}" class="btn btn-danger">Generar PDF</a>
+        <a href="{{ path('report_excel_user') }}" class="btn btn-success">Generar Excel</a>
+        
         <table>
             <thead>
                 <tr>
